@@ -75,52 +75,49 @@ class Resolver(BaseWindow):
         self.resolve(self.sources)
 
     def reorder_sources(self, sources):
-        # last played source move to top of list
+        import re
         if len(sources) > 1 and not self.source_select:
-            last_played = control.getSetting('last_played_source')
-            episode_value = str(self.episode)
-            episode_value_length = len(episode_value)  # Get the length of episode_value
-            for index, source in enumerate(sources):
+            lp = control.getSetting('last_played_source') or ''
+            # remove any [HASH] blocks (e.g. [E5A85899])
+            lp = re.sub(r'\[[0-9A-Fa-f]{8,}\]', '', lp).strip()
+
+            ep = str(self.episode)
+            L = len(ep)
+
+            # 1) Precompute all offsets where exactly L digits occur in a row
+            digit_positions = [
+                i for i in range(len(lp) - L + 1)
+                if lp[i:i+L].isdigit()
+            ]
+
+            for idx, source in enumerate(sources):
+                # embed/direct-style
                 if source['type'] in ['embed', 'direct']:
-                    concatenated_info = str(source['provider']) + " ".join(map(str, source['info']))
-                    if concatenated_info == last_played:
-                        sources.insert(0, sources.pop(index))
+                    key = source['provider'] + " " + " ".join(map(str, source['info']))
+                    if key == lp:
+                        sources[0], sources[idx] = sources[idx], sources[0]
                         break
+
+                # torrent-style
                 elif source['type'] in ['torrent', 'torrent (uncached)', 'cloud', 'hoster', 'local']:
-                    release_title = str(source['release_title'])
-                    chars = list(last_played)
-                    match_found = False
+                    rel = str(source['release_title'])
+                    # strip hashes from the release title too
+                    rel = re.sub(r'\[[0-9A-Fa-f]{8,}\]', '', rel).strip()
 
-                    i = 0
-                    while i < len(chars):
-                        if chars[i].isdigit():
-                            # Check if there's enough room to replace episode_value_length digits
-                            if i + episode_value_length <= len(chars) and all(c.isdigit() for c in chars[i:i + episode_value_length]):
-                                # Replace the next episode_value_length digits with episode_value
-                                for j in range(episode_value_length):
-                                    chars[i + j] = episode_value[j]
-                                modified_last_played = ''.join(chars)
+                    # 2) exact match fallback
+                    if rel == lp:
+                        sources[0], sources[idx] = sources[idx], sources[0]
+                        break
 
-                                if modified_last_played == release_title:
-                                    sources.insert(0, sources.pop(index))
-                                    match_found = True
-                                    break  # Found a match, no need to continue
-
-                                # Reset the modified characters if not a match
-                                for j in range(episode_value_length):
-                                    chars[i + j] = last_played[i + j]
-
-                            i += episode_value_length  # Move past the digits just checked or replaced
-                        else:
-                            i += 1  # Move to the next character if the current one is not a digit
-
-                        if match_found:
+                    # 3) try each digit-run position
+                    for pos in digit_positions:
+                        if rel.startswith(lp[:pos]) and rel.endswith(lp[pos+L:]):
+                            sources[0], sources[idx] = sources[idx], sources[0]
+                            idx = None
                             break
+                    if idx is None:
+                        break
 
-                        if not match_found:
-                            if str(source['release_title']) == last_played:
-                                sources.insert(0, sources.pop(index))
-                                break
         return sources
 
     def resolve(self, sources):
