@@ -1,3 +1,8 @@
+Changelog v5.2.15 (2025-05-11):
+- Improved Last Played Matching
+- Playing Next Episode will be alot faster
+- Fixed Aniwave Playback
+
 Changelog v5.2.14 (2025-05-09):
 - Fix Weird Black Screen Bug when playing next episode
 
